# adventofcode

./: .gitignore  Cargo.toml  README.md  day1.rb  day2.rb  new.sh
2015/: day7.ts
2015/day10/: day10.ml  day10.rb
2015/day3/: day3.rb
2015/day5/: day5.rb
2015/day7/: day7.rb
2015/input/: day7-input.ts
2016/day1/: day1.rb
2016/day2/: day2.rb
2016/day3/: day3.rb
2016/day4/: day4.rb
2017/: day1.ts  day2.ts  day3.ts  day4.ts  package.json  tsconfig.json
2017/input/: day4.ts
2018/: tsconfig.json
2018/day2/: day2.tss  input-day2.tss
2018/day3/: day3.ts  index.html  input.ts
2019/: day1.ts  tsconfig.json
2019/input/: day1-input.ts
2020/: day1.ts  day10.ts  day11.ts  day12.ts  day16.ts  day2.ts  day3.ts  day4.ts  day5.ts  day6.ts  day7.ts  day8.ts  day9.ts  package.json  tsconfig.json
2020/input/: day1-input.ts  day10-input.ts  day11-input.ts  day12-input.ts  day16-input.ts  day2-input.ts  day3-input.ts  day4-input.ts  day5-input.ts  day6-input.ts  day7-input.ts  day8-input.ts  day9-input.ts
day1/: day1.ml  day1.rb
day4/: day4.rb
day6/: day6.rb
src/: lib.rs  template.txt
