[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"

[lints.clippy]
all = "deny"
pedantic = "deny"

[lints.rust]
unsafe_code = "forbid"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"
unused_import_braces = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
