[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
md5 = "0.7.0"
regex = "1.7.0"

[lints.clippy]
all = { level = "deny", priority = 0 }
needless_range_loop = { level = "allow", priority = 1 }
pedantic = { level = "deny", priority = 2 }

[lints.rust]
unsafe_code = "forbid"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"
unused_import_braces = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
